fix date created + responsive spacing fix

--- a/app/assets/stylesheets/styles.css.sass
+++ b/app/assets/stylesheets/styles.css.sass
@@ -81,6 +81,8 @@ video#bgvid
     padding-top: 10rem
     line-height: inherit
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4)
+    @media only screen and (max-width: 40em)
+      padding-top: 3rem
 
   h3
     padding: 1rem 0
